--- a/qr/packages.config
+++ b/qr/packages.config
@@ -6,4 +6,5 @@
   <package id="Freezer" version="1.0.1.5" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.11.38" targetFramework="net461" />
   <package id="Web.Screenshot" version="1.0.0.1" targetFramework="net461" />
+  <package id="ZXing.Net" version="0.16.6" targetFramework="net461" />
 </packages>
