--- a/qr3/packages.config
+++ b/qr3/packages.config
@@ -10,6 +10,7 @@
   <package id="HtmlAgilityPack" version="1.11.38" targetFramework="net461" />
   <package id="Magick.NET.Core" version="8.4.0" targetFramework="net461" />
   <package id="Magick.NET-Q8-AnyCPU" version="8.4.0" targetFramework="net461" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Noksa.WebDriver.ScreenshotsExtensions" version="0.1.5.4" targetFramework="net461" />
   <package id="Selenium.Support" version="4.1.0" targetFramework="net461" />
